--- a/beprepared/platforms/android/app/src/main/assets/www/css/pantallaBienvenido.css
+++ b/beprepared/platforms/android/app/src/main/assets/www/css/pantallaBienvenido.css
@@ -84,7 +84,7 @@ body {
     left: 28px;
 	background: white;
 	width: 300px;
-    height: 121px;
+    height: 131px;
 	margin: auto;
     border-radius: 8px;
 }
@@ -100,11 +100,11 @@ body {
 }
 #AnaTextBienvenidos{
   
-   font-size: 9pt; 
+   font-size: 10pt; 
     color: #2d2d2d; 
     position: absolute;
     top: 16px;
-    
-   left: 39px;
+    width: 290px;
+   left: 10px;
    margin: auto;
 }
