--- a/beprepared/platforms/android/app/src/main/res/xml/config.xml
+++ b/beprepared/platforms/android/app/src/main/res/xml/config.xml
@@ -24,6 +24,10 @@
     <allow-intent href="mailto:*" />
     <allow-intent href="geo:*" />
     <allow-intent href="market:*" />
+    <icon density="ldpi" src="res/icon/android/ldpi.png" />
+    <icon density="mdpi" src="res/icon/android/mdpi.png" />
+    <icon density="hdpi" src="res/icon/android/hdpi.png" />
+    <icon density="xhdpi" src="res/icon/android/xhdpi.png" />
     <preference name="loglevel" value="DEBUG" />
     <preference name="Fullscreen" value="true" />
 </widget>
